--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : "Lorem@ipsum.com"
-  researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
+  email            : 
+  researchgate     :  "https://www.researchgate.net/profile/Jie-Gao-170?ev=hdr_xprf"
   uri              :
   bitbucket        :
   codepen          :
