--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/JIE2016G"
+  github           : "JIE2016G"
   google_plus      :
   keybase          :
   instagram        :
