--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 title                    : "Jie Gao"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
-repository               : "RayeRen/acad-homepage.github.io"
+description              : "Ph.D. Candidate in Learning Sciences researching AI in education. "
+repository               : "JIE2016G/jg.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
