--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,24 +1,24 @@
 # main links links
 main:
   - title: "About Me"
-    url: "/#about-me"
+    url: ""
 
   - title: "Publications"
-    url: "/#publications"
+    url: ""
 
   - title: "Work and Research Experience"
-    url: "/#work-research"
+    url: ""
 
   - title: "Educations"
-    url: "/#educations"
+    url: ""
 
   - title: "Honors and Awards"
-    url: "/#honors-awards"
+    url: ""
 
   - title: "Invited Talks"
-    url: "/#invited-talks"
+    url: ""
 
   - title: "Projects as Founder"
-    url: "/#projects-founder"
+    url: ""
 
   
