--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,24 +1,24 @@
 # main links links
 main:
   - title: "About Me"
-    url: ""
+    url: "/about"
 
   - title: "Publications"
-    url: ""
+    url: "/publications"
 
   - title: "Work and Research Experience"
-    url: ""
+    url: "/work-research"
 
   - title: "Educations"
-    url: ""
+    url: "/educations"
 
   - title: "Honors and Awards"
-    url: ""
+    url: "/honors-awards"
 
   - title: "Invited Talks"
-    url: ""
+    url: "/invited-talks"
 
   - title: "Projects as Founder"
-    url: ""
+    url: "/projects"
 
   
