--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ title                    : "Jie Gao"
 description              : "Ph.D. Candidate in Learning Sciences researching AI in education. "
 repository               : "JIE2016G/jg.github.io"
 google_scholar_stats_use_cdn : true
+domain: "https://jie2016g.github.io/j.i.e"
 
 # google analytics
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
