--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ google_scholar_stats_use_cdn : true
 domain: "https://jie2016g.github.io/j.i.e"
 
 # google analytics
-google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      :  G-SDQF6C9VBT
 
 # SEO Related
 google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
