--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Invited Talks"
     url: "/#invited-talks"
 
-  - title: "Projects as Founder"
+  - title: "Projects"
     url: "/#projects"
 
   
