--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Jie Gao"
+title                    : "Dan Chen"
 description              : "Ph.D. Candidate in Learning Sciences researching AI in education. "
 repository               : "JIE2016G/jg.github.io"
 baseurl                  : "/j.i.e"
