--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Jie Gao"
+  name             : "Dan Chen"
   avatar           : "images/android-chrome-512x512.png.png"
   bio              : "EdTech Researcher"
   location         : "Montreal, Canada"
